catkin_ws/logs/iq_gnc/build.make.361.log.stderr
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘void go_to_goalPos(float, float, float)’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:521:9: error: ‘rate’ was not declared in this scope
  521 |         rate.sleep();
      |         ^~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
